<resources>
    <string name="app_name">CALCULADORA</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="btn_0">0</string>
    <string name="btnSoma">+</string>
    <string name="btnSubtracao">-</string>
    <string name="btnDivisao">/</string>
    <string name="btnMultiplicacao">x</string>
    <string name="btnClear">C</string>
    <string name="btnvirgula">,</string>
    <string name="btnigual"> = </string>


</resources>
